feat(storage): add delete resource method